Improve and test url encoding